# SUDOCODE_Pose2Pose

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  action_detect.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
agents/: feedback_agent.py  training_agent.py
backend/: main.py
backend/agents/: feedback_agent.py  planning_agent.py  training_agent.py
backend/core/: tools.py
backend/crew/: __init__.py  agents.yaml  sign_language_crew.py  tasks.yaml
backend/notebook/: rag_chatbot.ipynb
backend/utils/: __init__.py
crew/: agents.yaml  sign_language_crew.py  tasks.yaml
frontend/: Home.py
frontend/pages/: About.py  Assessment.py  Lesson.py  Modules.py
