[project]
name = "pose2pose-poc"
version = "0.1.0"
description = "Pose2Pose Proof of Concept - Streamlit Frontend + Python Backend Functions"
requires-python = ">=3.10"
dependencies = [
    # Frontend
    "streamlit>=1.50.0",
    # Backend (no API dependencies needed)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
    "httpx>=0.28.1",
]

[tool.uv.sources]

